Database Change to PostgreSql and Test Every endpoint which also include bug fix during these change